# ELTE_Prog

./: .gitignore  Readme.md
alg1cpp/: CMakeLists.txt
algo1/: CMakeLists.txt  Readme.md
algo1/algo2/: main.cpp
algo1/algo2/fire/: be2.txt  ki2.txt  main.cpp  main2.cpp  main3.cpp  res2.txt  res3.txt  res4.txt  res_m2_1.txt
algo1/algo2/sortest_flight/: be2.txt  main.cpp
algo1/algoritmusok1/src/com/zlrx/algorithms/five/: BinaryTree.java  CyclicList.java
algo1/algoritmusok1/src/com/zlrx/algorithms/three/: InsertionSort.java
algo1/bintree/: Common.h
algo1/heap/: main.cpp
algo1/radix/: CountingSort.h  Radix.h
algo1/zh1/: FileReader.h  delivery1.txt
algo2/: build.gradle.kts  (+1 more)
objektum_elvu_programozas/: CMakeLists.txt
objektum_elvu_programozas/2018_spring_blackhole_advanced/: input.txt
objektum_elvu_programozas/2018_spring_blackhole_basic/: input.txt
objektum_elvu_programozas/7_recipe/: test3.txt  test4.txt  test5.txt
objektum_elvu_programozas/angler/: input.txt  main.cpp
objektum_elvu_programozas/bank/: accounts.txt  main.cpp
objektum_elvu_programozas/bead1/: Bag.cpp  Menu.cpp  bead1.docx  main.cpp
objektum_elvu_programozas/bead2/: AnglerEnumerator.cpp  ContestEnumerator.h  main.cpp
objektum_elvu_programozas/bead2/test/: t10.txt  t14.txt  t7.txt  t8.txt  t9.txt
objektum_elvu_programozas/bead3/: file_handler.h  main.cpp  pet.cpp  pet.h  simulator.cpp  test2.txt  test4.txt  test5.txt  test6.txt
objektum_elvu_programozas/complex/: Complex.cpp  Complex.h  Menu.cpp  Menu.h  main.cpp
objektum_elvu_programozas/cz72ym_zh2/: main.cpp
objektum_elvu_programozas/cz72ym_zh2_5/: test_1.txt  test_3.txt
objektum_elvu_programozas/itshop/: InvoiceProcessor.cpp  InvoiceProcessor.h  main.cpp
objektum_elvu_programozas/lib/: arrayenumerator.hpp  intervalenumerator.hpp  selection.hpp  seqinfileenumerator.hpp  stringstreamenumerator.hpp
objektum_elvu_programozas/map/: Map.cpp
objektum_elvu_programozas/most_common_number/: main.cpp
objektum_elvu_programozas/petrolstation/: PayOffice.h  main.cpp
objektum_elvu_programozas/polygon/: Point.cpp
objektum_elvu_programozas/restaurant/: FoodOrderEnumerator.cpp  FoodOrderEnumerator.h  test2.txt  test3.txt
objektum_elvu_programozas/task2/: input.txt  main.cpp
objektum_elvu_programozas/zh2_3/: test_1.txt  test_2.txt
operacios_rendszerek/bead_1/: CMakeLists.txt  add_processor.c  add_processor.h  delete_processor.c  delete_processor.h  file_handler.c  file_handler.h  main.c  mock_generator.c  mock_generator.h  modify_processor.c  modify_processor.h  patient.h  utils.c  utils.h  vaccination_processor.c  vaccination_processor.h
operacios_rendszerek/bead_1/gyak/: example_zh.c  message_queue.c  mq2.c  semaphore.c  shared_memory.c  signal.c
operacios_rendszerek/bead_1/zh/: 1.c  2.c  4.c
(+1126 files in other folders)
