cmake_minimum_required(VERSION 3.15)
project(oop)

set(CMAKE_CXX_STANDARD 14)

add_executable(7_recipe 7_recipe/main.cpp 7_recipe/RecipeEnumerator.cpp)
add_executable(2018_spring_blackhole_advanced 2018_spring_blackhole_advanced/main.cpp)
add_executable(2018_spring_blackhole_basic 2018_spring_blackhole_basic/main.cpp)
add_executable(angler angler/main.cpp)
add_executable(bank bank/main.cpp)
add_executable(bead1 bead1/main.cpp bead1/Bag.cpp bead1/Menu.cpp)
add_executable(bead2 bead2/main.cpp bead2/AnglerEnumerator.cpp bead2/ContestEnumerator.cpp)
add_executable(bead3 bead3/main.cpp bead3/pet.cpp bead3/simulator.cpp)
add_executable(complex complex/main.cpp complex/Complex.cpp complex/Menu.cpp)
add_executable(hunter hunter/main.cpp)
add_executable(itshop itshop/main.cpp itshop/InvoiceProcessor.cpp)
add_executable(map map/main.cpp map/Map.cpp)
add_executable(most_common_number most_common_number/main.cpp)
add_executable(petrolstation petrolstation/main.cpp)
add_executable(polygon polygon/polygon_main.cpp polygon/Point.cpp polygon/Polygon.cpp)
add_executable(restaurant restaurant/main.cpp restaurant/FoodOrderEnumerator.cpp)
add_executable(task1 task1/main.cpp)
add_executable(task2 task2/main.cpp)
add_executable(zh2_3 zh2_3/main.cpp)
add_executable(zh2_5 zh2_5/main.cpp)
